--- a/client/components/login/login.css
+++ b/client/components/login/login.css
@@ -7,7 +7,7 @@
    height: 50px;line-height: 50px;
 }
 .login_header>.reg_link{
-   margin-left: 30px;
+/*    margin-left: 30px; */
    /* font-size: 20px; */
    color: #7f8c8d;
 }
